--- a/_posts/2014-02-13-feastie.markdown
+++ b/_posts/2014-02-13-feastie.markdown
@@ -5,6 +5,7 @@ categories: []
 author_name: Julien
 author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
+tags: subscriber, customer, usecase
 ---
 
 It's not always obvious to understand what apps you use and love are Superfeedr customers. This month, we'd like to shed some light on [Feastie](http://www.feastie.com/).
