--- a/_posts/2010-09-28-top-feeds-list.textile
+++ b/_posts/2010-09-28-top-feeds-list.textile
@@ -5,7 +5,11 @@ categories: []
 author_name: Julien
 author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
+description: "We curated a list of popular feeds. These top feeds have been extracted from the Superfeedr database."
+tags: popularity, feed api, metadata, top feeds, curation
 ---
+
+**[Update]** we now have a much better way to assess the popularity of each feed inside Superfeedr by combining many different signals, from the social networks, the feed readers... etc. Check "our schema for details":http://documentation.superfeedr.com/schema.html#popularity and see how to use Superfeedr to "subscribe to the most popular content":/subscribe-to-popular-rss-feeds/ on the web.!
 
 Several of our users in the past asked us whether we had a list of the *most popular news feeds* available on the web. Obviously, the definition of popular varies from a person to another, but it's certainly possible to establish a _list of feeds from the main sources_, the _most read blogs_, the _biggest newspaper and news sites_, or the _most influential people's streams_.
 
@@ -15,4 +19,5 @@ For example, we have feeds from classifieds sites, or ecommerce websites, which 
 
 Luckily, the web has a lot of sources which could help us constitute this kind of list, with services like "Technorati":http://technorati.com/blogs/top100, "Techmeme":http://www.techmeme.com/, "Google Blog search":http://blogsearch.google.com/, "Bloglines":http://www.bloglines.com/topblogs and many many others... So we were able to extract a list of nearly 40k curated feeds. We have also decided to compare this list with the list of top subscribed on Superfeedr, and here is a list of about 4k feeds that you could consider as being popular from this list of curated feeds.
 
-You can find "these list":http://github.com/superfeedr/popular-feeds on our "github repo":http://github.com/superfeedr/. Feel free to fork, add/remove or even create a new list and we'll be happy to merge back the changes. Obviously these lists have to be alive. So we will update them too, based on what we find and what people subscribe to!
+You can find "these lists":http://github.com/superfeedr/popular-feeds on our "github repo":http://github.com/superfeedr/. Feel free to fork, add/remove or even create a new list and we'll be happy to merge back the changes. Obviously these lists have to be alive. So we will update them too, based on what we find and what people subscribe to!
+
