--- a/_posts/2010-01-26-state-fo-realtime-feeds-01-01.textile
+++ b/_posts/2010-01-26-state-fo-realtime-feeds-01-01.textile
@@ -7,7 +7,7 @@ author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
 ---
 
-It's this time again : the time for the _very_ controversial numbers about realtime feeds. Before anything else, I'd like to indicate that it would be great for other services to publish similar numbers. We know "who":http://blog.superfeedr.com/Feeds/PubSubHubbub/real-time/stats/who-implemented-pubsubhubbub/ "implemented":http://blog.superfeedr.com/Feeds/PubSubHubbub/real-time/stats/who-pubsubhubbub/:http://blog.superfeedr.com/Feeds/PubSubHubbub/real-time/stats/who-pubsubhubbub/ *PubSubHubbub*, I guess some of them implemented *RSSCloud* and *SUP* too.
+It's this time again : the time for the _very_ controversial numbers about realtime feeds. Before anything else, I'd like to indicate that it would be great for other services to publish similar numbers. We know "who":http://blog.superfeedr.com/Feeds/PubSubHubbub/real-time/stats/who-implemented-pubsubhubbub/ "implemented":http://blog.superfeedr.com/Feeds/PubSubHubbub/real-time/stats/who-pubsubhubbub/ *PubSubHubbub*, I guess some of them implemented *RSSCloud* and *SUP* too.
 
 Since we have so much debate in the past about the methodology:
 
