--- a/_posts/2009-11-16-win-a-ticket-for-leweb.textile
+++ b/_posts/2009-11-16-win-a-ticket-for-leweb.textile
@@ -11,7 +11,7 @@ We're very excited to be part of "LeWeb's":http://www.leweb.net/  "startup compe
 
 !{float:left;margin:0px 10px 10px 0px;}http://www.leweb.net/sites/all/themes/leweb-leweb/logo.png!As any other candidate, _we got 2 tickets_. One for "me":http://twitter.com/julien51, and one for... *YOU*! Well, not all of you, but just the one of you who *creates a coolest app* out of a new small feature we're launching today : *our rivers*.
 
-The rivers will be _freely accessible streams of data_ out of Superfeedr. The first one (and the one that's in competition), is a *sample of our global stream, with at most 1 message every 3 seconds* : "http://rivers.superfeedr.com:8001":http://rivers.superfeedr.com:8001
+The rivers will be _freely accessible streams of data_ out of Superfeedr. The first one (and the one that's in competition), is a *sample of our global stream, with at most 1 message every 3 seconds*.
 
 We built this river with the newly released "Compp":http://github.com/superfeedr/compp : a *small HTTP server* that allows you to do "Comet Streams":http://en.wikipedia.org/wiki/Comet_(programming) out of *XMPP traffic*. It's an _AtomStream_ : a never ending HTTP connection that contains ATOM entries[1].
 
@@ -19,7 +19,7 @@ There will be several judges for your apps, including "Astro":http://identi.ca/a
 
 The only constraints are :
 
-* it *must use the river* that is accessible at http://rivers.superfeedr.com:8001
+* it *must use the river* that is accessible at
 * your app *must be visible* (dowloadable or web accessible) on December 4th at midnight PST.
 * you *must write a blog post or a doc page* explaining what it is, how it works and how to use it!
 
